<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ImgCollector</string>
    <string name="btn_play">PLAY</string>
    <string name="btn_about">ABOUT</string>
    <string name="btn_exit">EXIT</string>
    <string name="btn_back">BACK</string>
    <string name="btn_hint">HINT</string>
    <string name="select_level">Select Level</string>
    <string name="dialog_finish_btn_text">CONTINUE</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="level_1">LEVEL: 1</string>
    <string name="level_2">LEVEL: 2</string>
    <string name="level_3">LEVEL: 3</string>
    <string name="level_4">LEVEL: 4</string>
    <string name="level_5">LEVEL: 5</string>
    <string name="level_6">LEVEL: 6</string>
    <string name="level_7">LEVEL: 7</string>
    <string name="level_8">LEVEL: 8</string>
    <string name="level_9">LEVEL: 9</string>
    <string name="level_10">LEVEL: 10</string>
    <string name="level_11">LEVEL: 11</string>
    <string name="level_12">LEVEL: 12</string>
    <string name="level_13">LEVEL: 13</string>
    <string name="level_14">LEVEL: 14</string>
    <string name="level_15">LEVEL: 15</string>
    <string name="level_16">LEVEL: 16</string>
    <string name="level_17">LEVEL: 17</string>
    <string name="level_18">LEVEL: 18</string>
    <string name="level_19">LEVEL: 19</string>
    <string name="level_20">LEVEL: 20</string>
    <string name="level_21">LEVEL: 21</string>
    <string name="level_22">LEVEL: 22</string>
    <string name="level_23">LEVEL: 23</string>
    <string name="level_24">LEVEL: 24</string>
    <string name="level_25">LEVEL: 25</string>
    <string name="level_26">LEVEL: 26</string>
    <string name="level_27">LEVEL: 27</string>
    <string name="level_28">LEVEL: 28</string>
    <string name="level_29">LEVEL: 29</string>
    <string name="level_30">LEVEL: 30</string>
    <string name="level_31">LEVEL: 31</string>
    <string name="level_32">LEVEL: 32</string>
    <string name="level_33">LEVEL: 33</string>
    <string name="level_34">LEVEL: 34</string>
    <string name="level_35">LEVEL: 35</string>
    <string name="level_36">LEVEL: 36</string>
    <string name="level_37">LEVEL: 37</string>
    <string name="level_38">LEVEL: 38</string>
    <string name="level_39">LEVEL: 39</string>
    <string name="level_40">LEVEL: 40</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_10">10</string>
    <string name="text_11">11</string>
    <string name="text_12">12</string>
    <string name="text_13">13</string>
    <string name="text_14">14</string>
    <string name="text_15">15</string>
    <string name="text_16">16</string>
    <string name="text_17">17</string>
    <string name="text_18">18</string>
    <string name="text_19">19</string>
    <string name="text_20">20</string>
    <string name="text_21">21</string>
    <string name="text_22">22</string>
    <string name="text_23">23</string>
    <string name="text_24">24</string>
    <string name="text_25">25</string>
    <string name="text_26">26</string>
    <string name="text_27">27</string>
    <string name="text_28">28</string>
    <string name="text_29">29</string>
    <string name="text_30">30</string>
    <string name="text_31">31</string>
    <string name="text_32">32</string>
    <string name="text_33">33</string>
    <string name="text_34">34</string>
    <string name="text_35">35</string>
    <string name="text_36">36</string>
    <string name="text_37">37</string>
    <string name="text_38">38</string>
    <string name="text_39">39</string>
    <string name="text_40">40</string>
    <string name="dialog_finish_text">Level completed. Congratulations!!!\n\nYou unlock next level</string>
    <string name="dialog_overGame">Congratulations!\n\nYou completed all game and unlock all level.\n\n Coming soon game part two. You will receive notifications as soon as the game is updated. \n\nSee you soon!</string>
    <string name="close">CLOSE</string>
    <string name="about_text">Сhildrens game \"ImgCollector\"\n\nThe game is similar to Puzzle.\n\nDuring the game you have to collect parts of the images.
    \n\nThe game has 40 levels. Levels are opened after completing the previous levels.
    \n\nHave a nice game!</string>
    <string name="discription_home_screen">home_screen_bg_image</string>
    <string name="discription_hint">hint_screen_bg_image</string>
    <string name="discription_game_level">hint_screen_bg_image</string>
    <string name="discription_splash">hint_screen_bg_image</string>
</resources>
