<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg_home_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:contentDescription="@string/discription_home_screen"
        android:scaleType="fitXY"
        android:src="@drawable/home_bg2" />

    <LinearLayout
        android:id="@+id/home_container_for_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/home_btn_play"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/btn_style"
            android:text="@string/btn_play"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/home_btn_about"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_style"
            android:text="@string/btn_about"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/home_btn_exit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/btn_style"
            android:text="@string/btn_exit"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/fox"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif" />
</RelativeLayout>